--- a/elastic-logger-web-api.csproj
+++ b/elastic-logger-web-api.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.9.5" />
     <PackageReference Include="Serilog.AspNetCore" Version="3.0.0" />
+    <PackageReference Include="Serilog.Exceptions" Version="5.3.1" />
     <PackageReference Include="Serilog.Sinks.Elasticsearch" Version="8.0.0" />
   </ItemGroup>
 
